Added refresh button to preview area. Tested with IE8 and Flash driver

--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -253,3 +253,8 @@ table {
 	font-family: 'segoe ui', Arial, sans-serif;
 	font-size: 13px;
 }
+
+/** Refresh button in the preview area **/
+.refresh_button {
+	float: right;
+}
