Fixed problem in JQuery UI stylesheet that was causing transparency issues in IE8

--- a/products/photocrati_nextgen/modules/nextgen_settings/static/jquery-ui/jquery-ui-1.9.1.custom.css
+++ b/products/photocrati_nextgen/modules/nextgen_settings/static/jquery-ui/jquery-ui-1.9.1.custom.css
@@ -1877,3 +1877,8 @@ body .ui-tooltip {
     height: 14px;
     width: 14px;
 }
+
+/** Fix overlays in IE8 **/
+.ui-widget-overlay {
+	filter: -\9;
+}
