Adjusted background color for overlays in JQuery UI

--- a/products/photocrati_nextgen/modules/nextgen_settings/static/jquery-ui/jquery-ui-1.9.1.custom.css
+++ b/products/photocrati_nextgen/modules/nextgen_settings/static/jquery-ui/jquery-ui-1.9.1.custom.css
@@ -1880,5 +1880,8 @@ body .ui-tooltip {
 
 /** Fix overlays in IE8 **/
 .ui-widget-overlay {
+	background: #000000 50% 50% repeat-x;
+	opacity: .4;
+    filter: Alpha(Opacity = 40);
 	filter: -\9;
 }
