--- a/products/photocrati_nextgen/modules/nextgen_basic_tagcloud/static/nextgen_basic_tagcloud.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_tagcloud/static/nextgen_basic_tagcloud.css
@@ -14,6 +14,6 @@
 .ngg-tagcloud ul.wp-tag-cloud li a {
     display: table-cell;
     display: block\9;
-    vertical-align: middle;
+    vertical-align: bottom;
     height: 30pt;
 }
