--- a/products/photocrati_nextgen/modules/nextgen_settings/static/nextgen_settings_page.css
+++ b/products/photocrati_nextgen/modules/nextgen_settings/static/nextgen_settings_page.css
@@ -105,3 +105,7 @@ td.align-to-top {
 .entity_errors ul li{
 	list-style-type: disc;
 }
+
+#nextgen_settings_preview_refresh {
+    display: block;
+}
