--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -1,6 +1,6 @@
 html,body {
 	width: 100%;
-	/*height: 100%;*/
+	height: 100%;
 	padding: 0px;
 	margin: 0px;
 	font-size: 13px;
@@ -24,6 +24,11 @@ html,body {
 #attach_to_post_tabs {
 	border: 0px;
 	background: none;
+	height: 100%;
+}
+
+.ui-tabs-panel {
+	height: 100%;
 }
 
 .ui-widget-header {
@@ -34,7 +39,7 @@ html,body {
 
 iframe {
 	width: 100%;
-	height: 100px;
+	height: 100%;
 	border: none;
 	padding: 0px;
 	margin: 0px;
