--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -6,6 +6,14 @@ html,body {
 	font-size: 13px;
 }
 
+body {
+	position: absolute;
+	visibility: hidden;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: alpha(opacity=0);
+	opacity: 0.0;
+}
+
 .entity_errors {
 	color: red;
 }
