--- a/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
+++ b/products/photocrati_nextgen/modules/attach_to_post/static/attach_to_post.css
@@ -1,6 +1,6 @@
 html,body {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	padding: 0px;
 	margin: 0px;
 	font-size: 13px;
@@ -32,11 +32,11 @@ body {
 #attach_to_post_tabs {
 	border: 0px;
 	background: none;
-	height: 100%;
+	min-height: 100%;
 }
 
 .ui-tabs-panel {
-	height: 100%;
+	min-height: 100%;
 }
 
 .ui-widget-header {
@@ -47,7 +47,7 @@ body {
 
 iframe {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	border: none;
 	padding: 0px;
 	margin: 0px;
@@ -248,7 +248,7 @@ table {
 	top: -5000px;
 }
 .ui-tabs .main_menu_tab {
-	overflow: scroll;
+	overflow: visible;
 }
 /**
  * Make the active tab still clickable
