--- a/products/photocrati_nextgen/modules/gallery_display/static/nextgen_display_settings_page.css
+++ b/products/photocrati_nextgen/modules/gallery_display/static/nextgen_display_settings_page.css
@@ -3,6 +3,7 @@
 }
 
 .gallery_page_ngg_display_settings table tr td:first-child {
+    vertical-align: top;
     text-align: right;
     padding-right: 7px;
 }
