--- a/products/photocrati_nextgen/modules/nextgen_settings/static/nextgen_admin_settings.css
+++ b/products/photocrati_nextgen/modules/nextgen_settings/static/nextgen_admin_settings.css
@@ -41,17 +41,15 @@ label.tooltip {
 
 span.tooltip span,
 label.tooltip span {
-    color: black;
     text-align: left;
     visibility: hidden;
     position: absolute;
-    bottom: -20px;
-    right: -285px;
+    min-width: 250px;
+    bottom: -15px;
     z-index: 999;
-    width: 250px;
-    margin-left: -127px;
     padding: 10px;
     border: 2px solid #ccc;
+    margin-left: 15px;
     opacity: 1;
     background-color: #ddd;
     background-image: -webkit-linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,0));
