Added section with small widget in Other Options to edit the list of image sizes used as default when creating thumbnails or resizing images

--- a/products/photocrati_nextgen/modules/nextgen_other_options/static/nextgen_settings_page.css
+++ b/products/photocrati_nextgen/modules/nextgen_other_options/static/nextgen_settings_page.css
@@ -55,6 +55,10 @@
 display:none;
 }
 
+.gallery_page_ngg_other_options .size_options select {
+	width: 300px;
+}
+
 .description_row{
 	position: relative;
 }
