--- a/products/photocrati_nextgen/modules/nextgen_admin/static/jquery-ui/jquery-ui-1.9.1.custom.css
+++ b/products/photocrati_nextgen/modules/nextgen_admin/static/jquery-ui/jquery-ui-1.9.1.custom.css
@@ -1863,10 +1863,10 @@ body .ui-tooltip {
 
 .ui-tabs-icon {
     float: left;
-    background: url('images/nextgen-logo-small.png') no-repeat center center;
+    background: url('images/nextgen-logo-small.jpg') no-repeat left center;
     font-size: 18px;
     font-family: HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', sans-serif;
-    width: 140px;
+    width: 200px;
     height: 40px;
 }
 
