Made gallerypath a read-only field in  admin page

--- a/products/photocrati_nextgen/modules/nextgen_admin/static/nextgen_admin_page.css
+++ b/products/photocrati_nextgen/modules/nextgen_admin/static/nextgen_admin_page.css
@@ -35,4 +35,5 @@ label.tooltip {
     background-image: url('information.png');
     background-repeat: no-repeat;
     padding-left: 18px;
+    padding-bottom: 1px;
 }
