--- a/products/photocrati_nextgen/modules/nextgen_basic_gallery/static/slideshow/nextgen_basic_slideshow.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_gallery/static/slideshow/nextgen_basic_slideshow.css
@@ -23,10 +23,32 @@ body {
 .ngg-slideshow {
     overflow: hidden;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 .ngg-slideshow * {
     vertical-align: middle;
+}
+
+.ngg-slideshow img {    
+	width: auto;
+	max-width: 100% !important;
+	max-height: 100% !important;
+	height: auto;
+}
+
+.ngg-slideshow .ngg-gallery-slideshow-image {
+	position: relative;
+	width: 100% !important;
+	height: 100% !important;
+	max-width: 100% !important;
+	max-height: 100% !important;
+}
+
+.ngg-slideshow .image-placeholder {
+	visibility: hidden;
 }
 
 /* See also : http://www.brunildo.org/test/img_center.html */
