Remove size options accordion and move settings over to the thumbnails accordion

--- a/products/photocrati_nextgen/modules/nextgen_other_options/static/nextgen_settings_page.css
+++ b/products/photocrati_nextgen/modules/nextgen_other_options/static/nextgen_settings_page.css
@@ -55,7 +55,7 @@
 display:none;
 }
 
-.gallery_page_ngg_other_options .size_options select {
+.gallery_page_ngg_other_options select.thumbnail_dimensions {
 	width: 300px;
 }
 
