--- a/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
@@ -58,14 +58,13 @@
 
 .ngg-album-compactbox {
     background: transparent url(albumset.gif) no-repeat scroll 0%;
-    height: 86px;
+    height: 88px;
     margin: 0pt 0pt 6px !important;
-    padding: 12px 0pt 0pt 7px !important;
+    padding: 8px 0pt 0pt 8px !important;
     width: 120px;
 }
 
 .ngg-album-compactbox .Thumb {
-    border: 1px solid #000000;
     margin: 0px !important;
     padding: 0px !important;
     width: 91px;
@@ -78,6 +77,12 @@
     margin-bottom: 0px;
     margin-top: 0px;
     width: 110px;
+}
+
+.ngg-album-compact h4 .ngg-album-desc {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .ngg-album-compact p {
