Resolved a problem with post permalink not being added to gallery/sub-album links. Added elipsis to long captions in NextGen Basic Album module. Converted NextGEN Basic Album to use lazy_resources_loaded event

--- a/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
@@ -80,9 +80,9 @@
 }
 
 .ngg-album-compact h4 .ngg-album-desc {
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    height: 80px;
     overflow: hidden;
+    display: block;
 }
 
 .ngg-album-compact p {
