--- a/products/photocrati_nextgen/modules/nextgen_admin/static/ngg_progressbar.css
+++ b/products/photocrati_nextgen/modules/nextgen_admin/static/ngg_progressbar.css
@@ -12,7 +12,7 @@
     width: 0%;
     text-align: right;
     color: white;
-    background-color: darkgreen;
+    background-image: url('animation.gif');
     border: solid 1px darkolivegreen;
     overflow: hidden;
     border-radius: 5px;
@@ -20,4 +20,9 @@
     font-size: 12px;
     padding-top: 3px;
     font-family: Helvetica, Arial
+}
+
+.ngg_progressbar.infinite div {
+    width: 100%;
+    text-align: center;
 }
