--- a/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
@@ -66,7 +66,7 @@
 
 .ngg-album-compactbox .Thumb {
     margin: 0px !important;
-    padding: 0px !important;
+    padding: 4px 0 0 0 !important;
     width: 91px;
     height: 68px;
 }
