--- a/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
@@ -62,11 +62,13 @@
     margin: 0pt 0pt 6px !important;
     padding: 8px 0pt 0pt 8px !important;
     width: 120px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 
 .ngg-album-compactbox .Thumb {
     margin: 0px !important;
-    padding: 4px 0 0 0 !important;
+    padding: 0px 0 0 0 !important;
     width: 91px;
     height: 68px;
 }
