Update page selection dropdown on edit-album form

--- a/products/photocrati_nextgen/modules/ngglegacy/admin/css/nggadmin.css
+++ b/products/photocrati_nextgen/modules/ngglegacy/admin/css/nggadmin.css
@@ -242,6 +242,10 @@ div .progressbar span {
 	padding-left: 50px;
 }
 
+#editalbum select[name='pageid'] {
+    width: 95%;
+}
+
 div .groupItem
 {
 	cursor: move;
