--- a/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_album/static/nextgen_basic_album.css
@@ -50,7 +50,7 @@
 .ngg-album-compact {
     float: left;
     height: 180px;
-    padding-right: 6px !important;
+    padding: 0 6px 4px 0 !important;
     margin: 0px !important;
     text-align: left;
     width: 120px;
@@ -77,16 +77,18 @@
     font-size: 15px;
     font-weight: bold;
     width: 110px;
+    margin: 0;
 }
 
 .ngg-album-compact h4 .ngg-album-desc {
     overflow: hidden;
     display: block;
+    height: 54px;
 }
 
 .ngg-album-compact p {
     font-size: 11px;
-    margin-top: 2px;
+    margin: 0;
 }
 
 .ngg-clear {
