Adjusted plupload to use Flash runtime when in IE

--- a/products/photocrati_nextgen/modules/nextgen_admin/static/gritter/css/gritter.css
+++ b/products/photocrati_nextgen/modules/nextgen_admin/static/gritter/css/gritter.css
@@ -1,7 +1,7 @@
 /* the norm */
 #gritter-notice-wrapper {
     position:fixed;
-    top:20px;
+    top:30px;
     right:20px;
     width:301px;
     z-index: 999999;
@@ -62,7 +62,7 @@
     display:none;
     position:absolute;
     top:5px;
-    left:3px;
+    right:3px;
     background:url(../images/gritter.png) no-repeat left top;
     cursor:pointer;
     width:30px;
