--- a/products/photocrati_nextgen/modules/nextgen_basic_templates/static/ngg_template_settings.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_templates/static/ngg_template_settings.css
@@ -11,4 +11,9 @@
 .ngg_settings_template_wrapper .ui-combobox-input {
     margin: 0;
     padding: 0.3em;
+    width: 365px;
+}
+
+.ngg_settings_template_wrapper .ui-helper-hidden-accessible {
+    display: none;
 }
