--- a/products/photocrati_nextgen/modules/nextgen_basic_imagebrowser/static/style.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_imagebrowser/static/style.css
@@ -11,31 +11,38 @@
     clear: both;
 }
 
+.ngg-imagebrowser .pic {
+	max-width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #A9A9A9;
+}
+.ngg-imagebrowser .pic a {
+  display: block !important;
+  font-size: 0px;
+  margin: 5px;
+}
+
 .ngg-imagebrowser img {
-    border: 1px solid #A9A9A9;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 100%;
-    display: block !important;
-    padding: 5px;
+	max-width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
 .ngg-imagebrowser-nav {
     padding: 5px;
-    margin-left: 10px;
 }
 
 .ngg-imagebrowser-nav .back {
     float: left;
     border: 1px solid #DDDDDD;
-    margin-right: 3px;
     padding: 3px 7px;
 }
 
 .ngg-imagebrowser-nav .next {
     float: right;
     border: 1px solid #DDDDDD;
-    margin-right: 3px;
     padding: 3px 7px;
 }
 
