Basic slideshow: set z-index to 0 for theme compat

--- a/products/photocrati_nextgen/modules/nextgen_basic_gallery/static/slideshow/nextgen_basic_slideshow.css
+++ b/products/photocrati_nextgen/modules/nextgen_basic_gallery/static/slideshow/nextgen_basic_slideshow.css
@@ -20,12 +20,13 @@ body {
 /* ----------- JS Slideshow -------------*/
 
 .ngg-slideshow {
-		overflow: hidden;
+    overflow: hidden;
     position: relative;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     clear: both;
+    z-index: 0;
 }
 
 .ngg-slideshow * {
